# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

############################################################################

[package]
name = "tokio_delayed_queue"
version = "0.1.0"
edition = "2021"

############################################################################

[dependencies]
# Common
parking_lot = { version = "^0.12.2", features = ["send_guard"] }
async-condvar-fair = { version = "^1.0.1", features = ["parking_lot_0_12"] }
derive-where = "^1.2.7"
pin-project = "^1.1.5"
# pin-project-lite = "^0.2.14"

# Tokio
tokio = { version = "^1.37.0", features = ["time"]}
