# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

############################################################################

[package]
name = "tokio_delayed_queue"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Asynchronous delayed queue for Tokio runtime."
readme = "README.md"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
# Keywords: https://crates.io/keywords
keywords = ["async", "tokio", "data-structures"]
# Categories available: https://crates.io/category_slugs
categories = ["asynchronous", "data-structures"]
documentation = "https://docs.rs/tokio_delayed_queue"
repository = "https://github.com/DevNulPavel/tokio_delayed_queue"
publish = ["crates-io"]
exclude = []

############################################################################

[dependencies]
# Common
parking_lot = { version = "^0.12.2", features = ["send_guard"] }
async-condvar-fair = { version = "^1.0.1", features = ["parking_lot_0_12"] }

# Tokio
tokio = { version = "^1.37.0", features = ["time"] }

############################################################################

[dev-dependencies]
# Tokio
tokio = { version = "^1.37.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
] }
tokio-test = "^0.4.4"
